--- a/about.html
+++ b/about.html
@@ -34,18 +34,74 @@
             <div class="main-area">
                 <div class="sectiontitle">
                     <h3>about</h3>
+                    <div class="about-header">
+                        <div class="about-images">
+                            <span class="aboutimage"><img src="images/52.png" alt="about-page-image"></span>
+                            <span class="aboutimage"><img src="images/51.png" alt="about-page-image"></span>
+                            <span class="aboutimage"><img src="images/53.png" alt="about-page-image"></span>
+                        </div>
+                        <span class="abouttext">This website showcases my work this summer on graphic and web design. I practiced applying the design 
+                        process, learned how to manipulate basic elements of design, and learned how to build a custom website 
+                        using HTML and CSS. </span>
+                    </div>
+                    
                 </div>
-                <p>This website is a portfolio for showcasing what I learned from my art and coding classes this summer. 
-                    In terms of graphic design, I learned how to think like a designer using the design process, and create 
-                    good design using principles such as balance, alignment, repetition, consistency, etc. I also got hands 
-                    on experience creating images on paper and digitally, as well as using typography to add meaning and structure 
-                    to a design. I also experimented with using shapes and color, and learned how to utilize different aspects 
-                    of contrast (such as scale and direction) to create an engaging visual design and to guide the viewer's eye. 
-                    Finally, I created two album covers for a fictional band that tied all of these different aspects of design 
-                    together into one piece. </p>
-                <p>In terms of web design, I learned how to use HTML to put content on a webpage, and CSS to 
-                    add style, with features such as layout, fonts and colors, transitions and animations, etc. I also learned 
-                    how to use Bootstrap to add responsive JavaScript features like slideshows and popups. </p>
+                <div class="accordion" id="accordionExample">
+                    <div class="card">
+                        <div class="card-header" id="headingOne">
+                        <h2 class="mb-0">
+                            <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            DESIGN PROCESS
+                            </button>
+                        </h2>
+                        </div>
+                    
+                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                        <div class="card-body">
+                            This project was more about learning some fundamentals of graphic and web design, and practicing 
+                            applying the design process, rather than building a substantial portfolio for one specialization. 
+                            The design process involves identifying a problem - asking what the issue is that needs to be solved, 
+                            who the design is for, and what are the logistics/constraints. 
+
+                        </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header" id="headingTwo">
+                        <h2 class="mb-0">
+                            <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            GRAPHIC DESIGN ELEMENTS
+                            </button>
+                        </h2>
+                        </div>
+                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                        <div class="card-body">
+                            In terms of graphic design, I learned how to create good design using principles such as balance, alignment, 
+                            repetition, consistency, etc. I also got hands on experience creating images on paper and digitally, as well 
+                            as using typography to add meaning and structure to a design. I also experimented with using shapes and color, 
+                            and learned how to utilize different aspects of contrast (such as scale and direction) to create an engaging 
+                            visual design and to guide the viewer's eye. Finally, I created two album covers for a fictional band that 
+                            tied all of these different aspects of design together into one piece. 
+                        </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header" id="headingThree">
+                        <h2 class="mb-0">
+                            <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            WEB DESIGN ELEMENTS
+                            </button>
+                        </h2>
+                        </div>
+                        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                        <div class="card-body">
+                            In terms of web design, I learned how to use HTML to put content on a webpage, and CSS to 
+                            add style, with features such as layout, fonts and colors, transitions and animations, etc. I also learned 
+                            how to use Bootstrap to add responsive JavaScript features like slideshows and popups. 
+                        </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
