--- a/about.html
+++ b/about.html
@@ -58,11 +58,12 @@
                     
                         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                         <div class="card-body">
-                            This project was more about learning some fundamentals of graphic and web design, and practicing 
-                            applying the design process, rather than building a substantial portfolio for one specialization. 
-                            The design process involves identifying a problem - asking what the issue is that needs to be solved, 
-                            who the design is for, and what are the logistics/constraints. 
-
+                            The design process involves: 1) identifying a problem - asking what the issue is that needs to be solved, 
+                            who the design is for, and what are the logistics/constraints. Next, 2) research - how have other people 
+                            addressed this design issue? Then 3) brainstorm - sketch or draw lots of ideas out for the next steps. 4) 
+                            narrow down the ideas and 5) evaluate those ideas - does your design solve the original problem? how can 
+                            it be improved? is all the content included? Finally, repeat 4) and 5) until you've come up with a 
+                            good design. 
                         </div>
                         </div>
                     </div>
