--- a/about.html
+++ b/about.html
@@ -98,7 +98,10 @@
                         <div class="card-body">
                             In terms of web design, I learned how to use HTML to put content on a webpage, and CSS to 
                             add style, with features such as layout, fonts and colors, transitions and animations, etc. I also learned 
-                            how to use Bootstrap to add responsive JavaScript features like slideshows and popups. 
+                            how to use Bootstrap to add responsive JavaScript features like slideshows and popups. This website 
+                            features a responsive layout for different screen sizes, a slideshow with linked thumbnails, 
+                            a responsive navigation bar for the gallery page, enlarged images when you click on gallery images,
+                            and an accordion style folder in the about page. 
                         </div>
                         </div>
                     </div>
