--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                             <span class="aboutimage"><img src="images/53.png" alt="about-page-image"></span>
                         </div>
                         <span class="abouttext">This website demonstrates my work this summer on graphic and web design. I practiced applying the design 
-                        process, learned how to manipulate basic elements of design, and learned how to build a custom website 
+                        process, learned how to manipulate basic elements of design, and how to build a custom website 
                         using HTML and CSS. </span>
                     </div>
                     
