--- a/about.html
+++ b/about.html
@@ -99,9 +99,9 @@
                             In terms of web design, I learned how to use HTML to put content on a webpage, and CSS to 
                             add style, with features such as layout, fonts and colors, transitions and animations, etc. I also learned 
                             how to use Bootstrap to add responsive JavaScript features like slideshows and popups. This website 
-                            features a responsive layout for different screen sizes, a slideshow with linked thumbnails, 
-                            a responsive navigation bar for the gallery page, enlarged images when you click on gallery images,
-                            and an accordion style folder in the about page. 
+                            features a responsive layout for different screen sizes, a slideshow with linked thumbnails (homepage), 
+                            a responsive navigation bar (gallery page), enlarged images when you click on gallery images,
+                            and an accordion style folder to show and hide content (about page). 
                         </div>
                         </div>
                     </div>
