--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                           </div>
                       </div>
                       <div class="carousel-item">
-                        <a href="gallery.html#typography"><img src="images/slide2.svg" class="d-block w-100" alt="typography"></a>
+                        <a href="gallery.html#typography"><img src="images/slide2.png" class="d-block w-100" alt="typography"></a>
                         <div class="carousel-caption d-none d-md-block">
                             <a href="gallery.html#typography"><p>TYPOGRAPHY</p></a>
                           </div>
